devscripts (2.10.5) UNRELEASED; urgency=low

  [ Luk Claes ]
  * debc: Make reporting on a single deb work again (Closes: #419487).

  [ Adam D. Barratt ]
  * debchange: Add gutsy (gibbon) and UNRELEASED to the list of recognised
    Ubuntu distributions

  [ Martin Zobel-Helas ]
  * debchange: Add volatile to the list of recognised Debian distributions
  * debchange: Add backports to the list of recognised Debian distributions

 -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Tue, 24 Apr 2007 13:10:46 +0100

devscripts (2.10.4) unstable; urgency=low

  [ Adam D. Barratt ]
  * grep-excuses: make the maintainer regex more restrictive to avoid accidental
    matches (Closes: #419462)
  * debchange: make adding multiple changelog blocks for a single maintainer optional
    (Closes: #419880)
  * Conflict with versions of kdesdk-scripts which shipped /usr/bin/licensecheck
    (Closes: #419754)
  * Ensure DEBCHANGE_TZ is always set (Closes: #419863)
  * Add myself to Uploaders

  [ Julian Gilbey ]
  * bts: update tags list to include lenny

  [ Luk Claes ]
  * debian/control: Add myself to Uploaders
  * licensecheck: Escape @kde otherwise build fails

 -- Luk Claes <luk@debian.org>  Mon, 23 Apr 2007 20:22:58 +0200

devscripts (2.10.3) unstable; urgency=low

  [ Adam D. Barratt ]
  * licensecheck: New script to determine which license(s) source files
    are under (Closes: #382148)
  * bts: Add claim / unclaim support, based on a patch by zobel
    (Closes: #385957)
  * debchange: don't add duplicate maintainer blocks in multi-maintainer
    mode (Closes: #383542)
  * Better document debchange's dependencies (Closes: #417633)
  * tagpending
    + Make the wnpp check introduced in 2.10.0 optional as it can be very expensive
    + Improve error message for skipped bugs (Closes: #418884)
  * rmadison: handle missing liburi-perl more gracefully

  [ Mohammed Adnène Trojette ]
  * bts: add an --cc-addr to allow sending carbon copies of emails sent