@@ -6,12 +6,14 @@ devscripts (2.10.5) UNRELEASED; urgency=low
   [ Adam D. Barratt ]
   * debchange: Add gutsy (gibbon) and UNRELEASED to the list of recognised
     Ubuntu distributions
+  * rc-alert
+    + Update HTML parsing to support the new structure of the RC bug page
 
   [ Martin Zobel-Helas ]
   * debchange: Add volatile to the list of recognised Debian distributions
   * debchange: Add backports to the list of recognised Debian distributions
 
- -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Tue, 24 Apr 2007 13:10:46 +0100
+ -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Wed, 25 Apr 2007 21:03:29 +0100
 
 devscripts (2.10.4) unstable; urgency=low
 
